RESOLVED FIXED108582
REGRESSION(r111639): delayed animation start can be postponed
https://bugs.webkit.org/show_bug.cgi?id=108582
Summary REGRESSION(r111639): delayed animation start can be postponed
dstockwell
Reported 2013-01-31 22:20:42 PST
REGRESSION(r111639): delayed animation start can be postponed
Attachments
Patch (6.98 KB, patch)
2013-01-31 22:37 PST, dstockwell
no flags
dstockwell
Comment 1 2013-01-31 22:37:29 PST
WebKit Review Bot
Comment 2 2013-02-01 00:15:47 PST
Comment on attachment 185948 [details] Patch Attachment 185948 [details] did not pass cr-linux-debug-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16302453
Alan Cutter
Comment 3 2013-02-01 02:45:24 PST
(In reply to comment #2) > (From update of attachment 185948 [details]) > Attachment 185948 [details] did not pass cr-linux-debug-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/16302453 This reported failure was due to this change in the cr-linux-debug-ews bots: bug 108512
dstockwell
Comment 4 2013-02-01 02:45:58 PST
Comment on attachment 185948 [details] Patch cr-linux-debug failure is spurious
Darin Adler
Comment 5 2013-03-06 09:09:53 PST
Comment on attachment 185948 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185948&action=review > Source/WebCore/page/animation/AnimationController.cpp:129 > + if (m_animationTimer.isActive() && (m_animationTimer.repeatInterval() || m_animationTimer.nextFireInterval() <= timeToNextService)) > + return; The use of repeat interval in this class is peculiar. I don’t understand the comment at all. It says “to reduce the overhead of starting”.
WebKit Review Bot
Comment 6 2013-03-06 09:17:01 PST
Comment on attachment 185948 [details] Patch Clearing flags on attachment: 185948 Committed r144935: <http://trac.webkit.org/changeset/144935>
WebKit Review Bot
Comment 7 2013-03-06 09:17:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.