REGRESSION(r111639): delayed animation start can be postponed https://bugs.webkit.org/show_bug.cgi?id=108582

Source/WebCore:

Query the animation timer directly for the time it will next fire rather than
trying to cache the interval. Previous approach was incorrect -- as time advanced
it was possible for the interval to jump beyond the next service time.

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2013-03-06
Reviewed by Darin Adler.

Test: animations/animation-delay-changed.html

* page/animation/AnimationController.cpp:
(WebCore::AnimationControllerPrivate::AnimationControllerPrivate):
(WebCore::AnimationControllerPrivate::updateAnimationTimerForRenderer):
(WebCore::AnimationControllerPrivate::updateAnimationTimer):
* page/animation/AnimationControllerPrivate.h:
(AnimationControllerPrivate): Remove m_previousTimeToNextService

LayoutTests:

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2013-03-06
Reviewed by Darin Adler.

* animations/animation-delay-changed-expected.txt: Added.
* animations/animation-delay-changed.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@144935 bbb929c8-8fbe-4397-9dbb-9b2b20218538