third_party/WebKit/Source/WebCore/page/animation/AnimationController.cpp
@@ -59,7 +59,6 @@ AnimationControllerPrivate::AnimationControllerPrivate(Frame* frame)
     , m_animationsWaitingForStyle()
     , m_animationsWaitingForStartTimeResponse()
     , m_waitingForAsyncStartNotification(false)
-    , m_previousTimeToNextService(0)
 {
 }
 
@@ -127,14 +126,9 @@ void AnimationControllerPrivate::updateAnimationTimerForRenderer(RenderObject* r
     if (!compAnim->suspended() && compAnim->hasAnimations())
         timeToNextService = compAnim->timeToNextService();
 
-    if (m_animationTimer.isActive()) {
-        if (m_previousTimeToNextService < timeToNextService)
-            return;
+    if (m_animationTimer.isActive() && (m_animationTimer.repeatInterval() || m_animationTimer.nextFireInterval() <= timeToNextService))
+        return;
 
-        m_animationTimer.stop();
-    }
-
-    m_previousTimeToNextService = timeToNextService;
     m_animationTimer.startOneShot(timeToNextService);
 }
 
@@ -146,8 +140,6 @@ void AnimationControllerPrivate::updateAnimationTimer(SetChanged callSetChanged/
     if (!timeToNextService) {
         if (!m_animationTimer.isActive() || m_animationTimer.repeatInterval() == 0)
             m_animationTimer.startRepeating(cAnimationTimerDelay);
-
-        m_previousTimeToNextService = timeToNextService;
         return;
     }
 
@@ -159,9 +151,6 @@ void AnimationControllerPrivate::updateAnimationTimer(SetChanged callSetChanged/
     }
 
     // Otherwise, we want to start a one-shot timer so we get here again
-    if (m_animationTimer.isActive())
-        m_animationTimer.stop();
-    m_previousTimeToNextService = timeToNextService;
     m_animationTimer.startOneShot(timeToNextService);
 }
 
