third_party/WebKit/Source/WebCore/page/animation/AnimationControllerPrivate.h
@@ -140,7 +140,6 @@ private:
     WaitingAnimationsSet m_animationsWaitingForStyle;
     WaitingAnimationsSet m_animationsWaitingForStartTimeResponse;
     bool m_waitingForAsyncStartNotification;
-    double m_previousTimeToNextService;
 };
 
 } // namespace WebCore
